[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/menu/GameOver.gd" type="Script" id=1]
[ext_resource path="res://source/game/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/interface/menu/MenuButton.tscn" type="PackedScene" id=3]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 2 )]
position = Vector2( -333.685, -173.685 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 238.0
margin_top = 146.0
margin_right = 338.0
margin_bottom = 238.0

[node name="LastScore" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
align = 1
valign = 1

[node name="BestScore" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
rect_min_size = Vector2( 100, 20 )
align = 1
valign = 1

[node name="Retry" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Retry"

[node name="TitleScreen" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "Titlescreen"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TitleScreen" to="." method="_on_TitleScreen_pressed"]
